# module

./: .gitignore  README.md  my_pip_package.py  setup.py
ExamplePackage/: README.md  pyproject.toml  setup.cfg  setup.py
ExamplePackage/src/example_package/: hello_world.py
ExamplePackage/src/example_package_nz3424/: hello_world.py
