##### pyproject.toml
# ..................................

[project]
name = "example_package_nz3424"
version = "0.0.2"
authors = [
  { name="Nick Zhu", email="nz3424@princeton.edu" },
]
description = "Testing example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [                                ### describe the project (optional)
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MarcRatkovic/module"  

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"