

[metadata]
name = ExamplePackage
version = 1.0
author = Nick Zhu
author_email = nz3424@princeton.edu
description = An example package to test before putting in actual modules
python_requires = >=3.7
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

    
[options]
package_dir=
    =src
packages=find:

zip_safe = False
include_package_data = True
install_requires =
    requests
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where=src